--- a/src/views/pages/App.css
+++ b/src/views/pages/App.css
@@ -1,5 +1,33 @@
+body {
+    margin: 0;
+    border: 0;
+    padding: 0;
+    background-color: floralwhite;
+}
 .app-container {
     display: flex;
+    flex-flow: column nowrap;
+    color:cornflowerblue;
+    font-size: 1.3em;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+h1 {
+    flex: 0 0 80px;
+    display: flex;
     justify-content: center;
-    color: #27aedb;
+    align-items: center;
+}
+
+.instructions-container{
+    color:fuchsia;
+}
+
+ul {
+    display: flex;
+    flex-flow: column nowrap;
+}
+
+li {
+    flex: 0 0 40px;
 }
